// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Translate components does not touch non-translation props 1`] = `
<WrappedComponent
  notToBeTranslated={99}
  translations={Object {}}
>
  <SomeTestComponent
    notToBeTranslated={99}
    translate={[Function]}
  >
    <img
      width={99}
    />
    <h1>
      Dies ist ein fester Titel
    </h1>
    <h2>
      Du, du hast.
    </h2>
    <p>
      Eine Schweinshaxe, bitte.
    </p>
  </SomeTestComponent>
</WrappedComponent>
`;

exports[`Translate components formats money correctly for the language 1`] = `
<WrappedComponent
  amount={42.37}
  customTitle="Zipfelklatschr"
  translations={Object {}}
>
  <SomeTestComponent
    amount={42.37}
    customTitle="Zipfelklatschr"
    translate={[Function]}
  >
    <img />
    <h1>
      Dies ist ein Zipfelklatschr
    </h1>
    <h2>
      Du hast € 42.37!
    </h2>
    <p>
      Hier wird nie etwas anderes stehen.
    </p>
  </SomeTestComponent>
</WrappedComponent>
`;

exports[`Translate components formats money correctly for the language 2`] = `
<WrappedComponent
  amount={2500.01}
  customTitle="Toblerone"
  translations={Object {}}
>
  <SomeTestComponent
    amount={2500.01}
    customTitle="Toblerone"
    translate={[Function]}
  >
    <img />
    <h1>
      Dies ist ein fester Titel
    </h1>
    <h2>
      Du hast CHF 2,500.01!
    </h2>
    <p>
      Eine Schweinshaxe, bitte.
    </p>
  </SomeTestComponent>
</WrappedComponent>
`;

exports[`Translate components handles pluralisation 1`] = `
<WrappedComponent
  numBurgers={0}
  translations={Object {}}
>
  <SomeTestComponent
    numBurgers={0}
    translate={[Function]}
  >
    <img />
    <h1>
      Dies ist ein fester Titel
    </h1>
    <h2>
      Du, du hast.
    </h2>
    <p>
      Let's eat no burgers today.
    </p>
  </SomeTestComponent>
</WrappedComponent>
`;

exports[`Translate components handles pluralisation 2`] = `
<WrappedComponent
  numBurgers={1}
  translations={Object {}}
>
  <SomeTestComponent
    numBurgers={1}
    translate={[Function]}
  >
    <img />
    <h1>
      Dies ist ein fester Titel
    </h1>
    <h2>
      Du, du hast.
    </h2>
    <p>
      Let's eat one burger today.
    </p>
  </SomeTestComponent>
</WrappedComponent>
`;

exports[`Translate components handles pluralisation 3`] = `
<WrappedComponent
  numBurgers={99}
  translations={Object {}}
>
  <SomeTestComponent
    numBurgers={99}
    translate={[Function]}
  >
    <img />
    <h1>
      Dies ist ein fester Titel
    </h1>
    <h2>
      Du, du hast.
    </h2>
    <p>
      Let's eat 99 burgers today.
    </p>
  </SomeTestComponent>
</WrappedComponent>
`;

exports[`Translate components passes translated strings alongside default fallbacks to wrapped components 1`] = `
<WrappedComponent
  translations={Object {}}
>
  <SomeTestComponent
    translate={[Function]}
  >
    <img />
    <h1>
      Good day, Sir.
    </h1>
    <h2>
      Du, du hast.
    </h2>
    <p>
      Eine Schweinshaxe, bitte.
    </p>
  </SomeTestComponent>
</WrappedComponent>
`;
